[gd_scene load_steps=14 format=3 uid="uid://btora7mwebya4"]

[ext_resource type="Texture2D" uid="uid://ccnp2djex2ldy" path="res://mystic_woods_free_2.1/sprites/tilesets/terrain/plains.png" id="1_4f1v1"]
[ext_resource type="Script" path="res://scripts/cliff_side.gd" id="1_r5g21"]
[ext_resource type="Texture2D" uid="uid://c7lyhcfin6diq" path="res://mystic_woods_free_2.1/sprites/tilesets/walls/Dungeon_Door.png" id="2_ew2xf"]
[ext_resource type="Texture2D" uid="uid://dc0f06quidkxi" path="res://mystic_woods_free_2.1/sprites/tilesets/floors/grass.png" id="2_rgbc1"]
[ext_resource type="Texture2D" uid="uid://b2cagibyx13r3" path="res://mystic_woods_free_2.1/sprites/objects/objects.png" id="3_2aude"]
[ext_resource type="PackedScene" uid="uid://cavvgwt012mtl" path="res://scenes/player.tscn" id="4_iuhr2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_buku5"]
texture = ExtResource("2_ew2xf")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6a124"]
texture = ExtResource("3_2aude")
0:0/0 = 0
0:0/0/y_sort_origin = 3
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.09375, 1.1875, 6.03125, 0.9375, 6.15625, 6.5625, -6.65625, 7.0625)
5:0/0 = 0
5:0/0/y_sort_origin = 3
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.09375, 1.1875, 6.03125, 0.9375, 6.15625, 6.5625, -6.65625, 7.0625)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 12
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.1875, 14, 7.1875, 15.5, 4.1875, 21, -5.8125, 20.125)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mpni7"]
texture = ExtResource("2_rgbc1")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qm0uq"]
texture = ExtResource("1_4f1v1")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/y_sort_origin = 7
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
5:9/0 = 0
5:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:9/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
4:10/0 = 0
4:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:10/0/physics_layer_0/angular_velocity = 0.0
5:10/0 = 0
5:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:10/0/physics_layer_0/angular_velocity = 0.0
0:11/0 = 0
0:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
4:11/0 = 0
4:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:11/0/physics_layer_0/angular_velocity = 0.0
5:11/0 = 0
5:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:11/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_wa3dw"]
physics_layer_0/collision_layer = 1
sources/3 = SubResource("TileSetAtlasSource_6a124")
sources/4 = SubResource("TileSetAtlasSource_mpni7")
sources/5 = SubResource("TileSetAtlasSource_qm0uq")
sources/0 = SubResource("TileSetAtlasSource_buku5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ra0ml"]
size = Vector2(69, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la5hs"]
size = Vector2(25, 27)

[node name="cliff_side" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_r5g21")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(1, -1)
tile_set = SubResource("TileSet_wa3dw")
collision_animatable = true
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, 327680, 4, 0, 393216, 4, 0, 393217, 4, 0, 458753, 4, 0, 458752, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 65541, 1, 458760, 131077, 1, 458761, 131077, 1, 458762, 131077, 1, 393226, 131077, 0, 327690, 4, 0, 262154, 4, 0, 196618, 131077, 6, 65546, 4, 0, 65545, 4, 0, 65544, 4, 0, 65543, 4, 0, 65542, 4, 0, 65541, 4, 0, 65540, 4, 0, 65539, 4, 0, 65538, 4, 0, 65537, 4, 0, 131073, 4, 0, 196617, 4, 0, 196616, 4, 0, 196615, 4, 0, 196614, 4, 0, 196613, 4, 0, 196612, 4, 0, 196611, 4, 0, 196610, 4, 0, 196609, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 327689, 4, 0, 327688, 4, 0, 327687, 4, 0, 327686, 4, 0, 327685, 4, 0, 327684, 4, 0, 327683, 4, 0, 327682, 4, 0, 327681, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 65541, 0, 393224, 131077, 0, 393225, 131077, 0, 458763, 131077, 1, 393227, 131077, 0, 327691, 4, 0, 262155, 4, 0, 196619, 131077, 6, 131083, 4, 0, 65547, 4, 0, 11, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 65541, 1, 524296, 131077, 1, 524297, 131077, 1, 524298, 131077, 1, 524299, 131077, 1, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 393231, 4, 0, 458767, 4, 0, 524303, 4, 0, 589839, 4, 0, 655375, 4, 0, 720911, 4, 0, 720910, 4, 0, 720909, 4, 0, 720908, 4, 0, 720907, 196613, 1, 655371, 196613, 1, 655370, 65541, 1, 655369, 4, 0, 655368, 4, 0, 720904, 4, 0, 720903, 4, 0, 720902, 4, 0, 655366, 4, 0, 589830, 4, 0, 589834, 327685, 0, 589833, 131077, 2, 589832, 131077, 2, 655367, 4, 0, 589831, 65541, 2, 458764, 131077, 1, 393228, 131077, 0, 393229, 131077, 0, 262158, 4, 0, 262157, 4, 0, 262156, 4, 0, 262159, 4, 0, 262160, 4, 0, 327696, 4, 0, 393232, 4, 0, 458768, 4, 0, 524304, 4, 0, 589840, 4, 0, 655376, 4, 0, 720912, 4, 0, 786448, 4, 0, 786447, 4, 0, 786446, 4, 0, 786445, 4, 0, 786444, 4, 0, 786443, 196613, 1, 786442, 65541, 1, 786441, 4, 0, 786440, 4, 0, 786439, 4, 0, 786438, 4, 0, 720901, 4, 0, 786437, 4, 0, 655365, 4, 0, 655372, 4, 0, 589836, 131077, 2, 524300, 131077, 1, 589835, 262149, 0, 720905, 4, 0, 720906, 65541, 1, 458765, 131077, 1, 524301, 131077, 1, 524302, 196613, 1, 589838, 196613, 2, 655374, 4, 0, 458766, 196613, 1, 393230, 196613, 0, 589837, 131077, 2, 655373, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 917516, 4, 0, 917515, 4, 0, 917514, 4, 0, 917513, 4, 0, 983049, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 4, 0)
layer_1/name = "cliff"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(65536, 131077, 5, 131072, 131077, 5, 196608, 131077, 5, 262144, 131077, 5, 327680, 131077, 5, 393216, 131077, 5, 458752, 131077, 5, 65547, 131077, 5, 131083, 131077, 5, 196619, 65536, 0, 1, 131077, 5, 2, 131077, 5, 3, 131077, 5, 4, 131077, 5, 5, 131077, 5, 6, 131077, 5, 7, 131077, 5, 8, 131077, 5, 9, 131077, 5, 10, 131077, 5, 11, 131077, 5, 0, 131077, 5, 524288, 131077, 5, 524289, 131077, 5, 524290, 131077, 5, 524291, 131077, 5, 12, 131077, 5, 65548, 131077, 5, 131084, 131077, 5, 196620, 131077, 6, 589827, 131077, 5, 589826, 131077, 5, 589825, 131077, 5, 589824, 131077, 5, 655360, 131077, 5, 655361, 131077, 5, 655362, 131077, 5, 655363, 131077, 5, 720900, 131077, 5, 720899, 131077, 5, 720898, 131077, 5, 720897, 131077, 5, 720896, 131077, 5, 786432, 131077, 5, 786433, 131077, 5, 786434, 131077, 5, 786435, 131077, 5, 786436, 131077, 5, 786437, 262149, 5, 786438, 131077, 4, 786439, 131077, 4, 786440, 131077, 4, 786445, 131077, 4, 196622, 131077, 5, 196621, 327685, 4, 131085, 131077, 5, 65549, 131077, 5, 13, 131077, 5, 14, 131077, 5, 15, 131077, 5, 16, 131077, 5, 17, 131077, 5, 18, 131077, 5, 19, 131077, 5, 65555, 131077, 5, 131091, 131077, 5, 196627, 131077, 5, 262163, 131077, 5, 327699, 131077, 5, 393235, 131077, 5, 458771, 131077, 5, 524307, 131077, 5, 589843, 131077, 5, 655379, 131077, 5, 720915, 131077, 5, 786451, 131077, 5, 786450, 131077, 5, 786449, 131077, 5, 786448, 327685, 5, 786447, 131077, 4, 786446, 131077, 4, 655376, 65541, 5, 655377, 131077, 5, 720913, 131077, 5, 720912, 65541, 5, 655378, 131077, 5, 720914, 131077, 5, 458769, 131077, 5, 458770, 131077, 5, 524306, 131077, 5, 589842, 131077, 5, 589840, 65541, 5, 524305, 131077, 5, 589841, 131077, 5, 327696, 65541, 5, 262161, 131077, 5, 327697, 131077, 5, 393233, 131077, 5, 393232, 65541, 5, 196623, 131077, 5, 196624, 131077, 5, 262160, 327685, 4, 131086, 131077, 5, 131087, 131077, 5, 65551, 131077, 5, 65552, 131077, 5, 65553, 131077, 5, 131089, 131077, 5, 131088, 131077, 5, 65550, 131077, 5, 65554, 131077, 5, 131090, 131077, 5, 196626, 131077, 5, 196625, 131077, 5, 262162, 131077, 5, 327698, 131077, 5, 393234, 131077, 5, 20, 131077, 5, 21, 131077, 5, 22, 131077, 5, 23, 131077, 5, 24, 131077, 5, 25, 131077, 5, 26, 131077, 5, 27, 131077, 5, 28, 131077, 5, 29, 131077, 5, 30, 131077, 5, 31, 131077, 5, 32, 131077, 5, 65568, 131077, 5, 131104, 131077, 5, 196640, 131077, 5, 262176, 131077, 5, 327712, 131077, 5, 393248, 131077, 5, 458784, 131077, 5, 524320, 131077, 5, 589856, 131077, 5, 655392, 131077, 5, 720928, 131077, 5, 786464, 131077, 5, 786463, 131077, 5, 786462, 131077, 5, 786461, 131077, 5, 786460, 131077, 5, 786459, 131077, 5, 786458, 131077, 5, 786457, 131077, 5, 786456, 131077, 5, 786455, 131077, 5, 786454, 131077, 5, 786453, 131077, 5, 786452, 131077, 5, 720916, 131077, 5, 720917, 131077, 5, 720918, 131077, 5, 655383, 131077, 5, 655384, 131077, 5, 655385, 131077, 5, 655386, 131077, 5, 655387, 131077, 5, 655388, 131077, 5, 655389, 131077, 5, 720924, 131077, 5, 720923, 131077, 5, 720922, 131077, 5, 720921, 131077, 5, 720920, 131077, 5, 720919, 131077, 5, 458776, 131077, 5, 393240, 131077, 5, 327704, 131077, 5, 262168, 131077, 5, 196632, 131077, 5, 131096, 131077, 5, 65560, 131077, 5, 65559, 131077, 5, 65558, 131077, 5, 65557, 131077, 5, 65556, 131077, 5, 131092, 131077, 5, 196628, 131077, 5, 262164, 131077, 5, 327700, 131077, 5, 393236, 131077, 5, 458772, 131077, 5, 524308, 131077, 5, 589844, 131077, 5, 655380, 131077, 5, 655381, 131077, 5, 589845, 131077, 5, 524309, 131077, 5, 458773, 131077, 5, 393237, 131077, 5, 327701, 131077, 5, 262165, 131077, 5, 196629, 131077, 5, 131093, 131077, 5, 131094, 131077, 5, 196630, 131077, 5, 262166, 131077, 5, 327702, 131077, 5, 393238, 131077, 5, 458774, 131077, 5, 524310, 131077, 5, 589846, 131077, 5, 655382, 131077, 5, 589847, 131077, 5, 524311, 131077, 5, 458775, 131077, 5, 393239, 131077, 5, 327703, 131077, 5, 262167, 131077, 5, 196631, 131077, 5, 131095, 131077, 5, 524312, 131077, 5, 589848, 131077, 5, 589849, 131077, 5, 524313, 131077, 5, 458777, 131077, 5, 393241, 131077, 5, 327705, 131077, 5, 262169, 131077, 5, 196633, 131077, 5, 131097, 131077, 5, 65561, 131077, 5, 65562, 131077, 5, 131098, 131077, 5, 196634, 131077, 5, 262170, 131077, 5, 327706, 131077, 5, 393242, 131077, 5, 458778, 131077, 5, 524314, 131077, 5, 589850, 131077, 5, 589851, 131077, 5, 524315, 131077, 5, 458779, 131077, 5, 393243, 131077, 5, 327707, 131077, 5, 262171, 131077, 5, 196635, 131077, 5, 131099, 131077, 5, 65563, 131077, 5, 65564, 131077, 5, 131100, 131077, 5, 196636, 131077, 5, 262172, 131077, 5, 327708, 131077, 5, 393244, 131077, 5, 458780, 131077, 5, 524316, 131077, 5, 589852, 131077, 5, 589853, 131077, 5, 524317, 131077, 5, 458781, 131077, 5, 393245, 131077, 5, 327709, 131077, 5, 262173, 131077, 5, 196637, 131077, 5, 131101, 131077, 5, 65565, 131077, 5, 65566, 131077, 5, 131102, 131077, 5, 196638, 131077, 5, 262174, 131077, 5, 327710, 131077, 5, 393246, 131077, 5, 458782, 131077, 5, 524318, 131077, 5, 589854, 131077, 5, 655390, 131077, 5, 720926, 131077, 5, 720925, 131077, 5, 720927, 131077, 5, 655391, 131077, 5, 589855, 131077, 5, 524319, 131077, 5, 458783, 131077, 5, 393247, 131077, 5, 327711, 131077, 5, 262175, 131077, 5, 196639, 131077, 5, 131103, 131077, 5, 65567, 131077, 5, 851968, 131077, 5, 851969, 131077, 5, 851970, 131077, 5, 851971, 131077, 5, 851972, 131077, 5, 851973, 131077, 5, 851974, 131077, 5, 851975, 131077, 5, 851976, 131077, 5, 851977, 131077, 5, 851978, 131077, 5, 917514, 131077, 5, 917515, 131077, 5, 917516, 131077, 5, 917517, 131077, 5, 917518, 131077, 5, 917519, 131077, 5, 851982, 131077, 5, 851981, 131077, 5, 851980, 131077, 5, 851979, 131077, 5, 851983, 131077, 5, 851984, 131077, 5, 851985, 131077, 5, 851986, 131077, 5, 851987, 131077, 5, 851988, 131077, 5, 851989, 131077, 5, 851990, 131077, 5, 851991, 131077, 5, 851999, 131077, 5, 851998, 131077, 5, 851997, 131077, 5, 851996, 131077, 5, 851995, 131077, 5, 851994, 131077, 5, 851993, 131077, 5, 851992, 131077, 5, 917504, 131077, 5, 917505, 131077, 5, 917506, 131077, 5, 917507, 131077, 5, 917508, 131077, 5, 917509, 131077, 5, 917510, 131077, 5, 917511, 131077, 5, 917512, 131077, 5, 917513, 131077, 5, 917520, 131077, 5, 917521, 131077, 5, 917522, 131077, 5, 917523, 131077, 5, 917524, 131077, 5, 917525, 131077, 5, 917526, 131077, 5, 917527, 131077, 5, 917528, 131077, 5, 917529, 131077, 5, 917532, 131077, 5, 917533, 131077, 5, 917531, 131077, 5, 917530, 131077, 5, 917534, 131077, 5, 917535, 131077, 5, 917536, 131077, 5, 852000, 131077, 5, 458753, 131077, 5, 458754, 131077, 5, 393217, 131077, 5, 393218, 131077, 5, 458755, 131077, 5, 327682, 131077, 5, 262145, 131077, 5, 196609, 131077, 5, 131073, 131077, 5, 65537, 131077, 5, 65546, 131077, 5, 65545, 131077, 5, 65544, 131077, 5, 65543, 131077, 5, 65542, 131077, 5, 65541, 131077, 5, 65540, 131077, 5, 65539, 131077, 5, 65538, 131077, 5, 131082, 131077, 5, 131081, 131077, 5, 131080, 131077, 5, 131079, 131077, 5, 131078, 131077, 5, 196613, 131077, 5, 196614, 131077, 5, 131077, 131077, 5, 131076, 131077, 5, 131075, 131077, 5, 131074, 131077, 5, 196612, 131077, 5, 196611, 131077, 5, 196610, 131077, 5, 196615, 131077, 5, 196616, 262149, 4, 196617, 131077, 6, 262147, 131077, 5, 262146, 131077, 5, 327681, 131077, 5, 262148, 131077, 5, 196618, 0, 0, 327684, 131077, 5, 327683, 131077, 5, 524292, 131077, 5, 393219, 131077, 5, 393220, 131077, 5, 655364, 131077, 5, 589828, 131077, 5, 458756, 131077, 5, 262154, 0, 1, 262155, 65536, 1, 262152, 196613, 6, 262151, 131077, 6, 262150, 131077, 6, 262149, 262149, 4, 262157, 65541, 6, 262158, 131077, 6, 262159, 131077, 6, 458768, 65541, 5, 524304, 65541, 5, 327685, 196613, 5, 393221, 196613, 5, 458757, 196613, 5, 524293, 196613, 5, 589829, 196613, 5, 655365, 196613, 5, 720901, 196613, 5, 786444, 131077, 4, 786443, 131077, 4, 786442, 131077, 4, 786441, 131077, 4)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(655375, 524291, 6, 655366, 524291, 6, 262159, 524291, 6, 262150, 524291, 6, 393226, 3, 0, 393227, 327683, 0, 262156, 524291, 6, 262153, 524291, 6)

[node name="player" parent="." instance=ExtResource("4_iuhr2")]
position = Vector2(183, 199)

[node name="world_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_transition"]
position = Vector2(177, 221)
shape = SubResource("RectangleShape2D_ra0ml")

[node name="dungeon_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dungeon_transition"]
position = Vector2(176.5, 48.5)
shape = SubResource("RectangleShape2D_la5hs")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(78, 64)
polygon = PackedVector2Array(61, 11, 15, 10, 15, 123, 22, 132, 74, 133, 64, 190, 135, 191, 123, 130, 177, 132, 181, 124, 183, 8, 140, 14, 115, 12, 116, -41, 74, -40, 81, 12, 32, -40, 74, -57, 263, -35, 234, 143, 174, 201, -44, 209, -92, 89, -61, -38, -9, -48, 74, 11)

[connection signal="body_entered" from="world_transition" to="." method="_on_world_transition_body_entered"]
[connection signal="body_entered" from="dungeon_transition" to="." method="_on_dungeon_transition_body_entered"]
